# grpc_storage

./: CMakeLists.txt  README.md  build.sh
client/: main.cpp
proto/: kvstore.proto
server/: file_storage_engine.cpp  file_storage_engine.h  main.cpp  memory_storage_engine.cpp  memory_storage_engine.h  storage_engine.h
tests/: engine_test.cpp  test_utils.cpp  test_utils.h
